--- a/amplify.yml
+++ b/amplify.yml
@@ -15,3 +15,8 @@ frontend:
   #cache:
   #  paths:
   #    - node_modules/**/*
+  customHeaders:
+    - pattern: '*'
+      headers:
+      - key: 'Access-Control-Allow-Origin'
+        value: '*'
